# python-client

./: .gitchangelog.rc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .ruff.toml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CHANGELOG.txt  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  atlas earth  azure-pipelines.yml  ci-requirements-py2.txt  ci-requirements-py3.txt  ci-requirements.txt  ci.sh  development.txt  docgen.py  lock_test.py  mypy.ini  pyproject.toml  release.py  release.sh  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml  functional-test.yml  issue_template.md
.github/actions/setup-appium-server/: action.yml
.github/workflow/: pr-title.yml
.github/workflows/: functional-test.yml  lock-update.yml  pr-title.yml  publish.yml  unit-test.yml
.pytest_cache/v/cache/: nodeids
appium/: __init__.py  mobilecommand.py  saucetestcase.py  version.py
appium/common/: __init__.py  exceptions.py  helper.py  logger.py  mobileby.py
appium/options/: base_options.py  base_options_descriptor.py  transformers.py
appium/options/android/: __init__.py
appium/options/common/: __init__.py  app_option.py  auto_web_view_option.py  automation_name_option.py  base.py  browser_name_option.py  bundle_id_option.py  clear_system_files_option.py  common_options.py  device_name_option.py  enable_performance_logging_option.py  event_timings_option.py  full_reset_option.py  is_headless_option.py  language_option.py  locale_option.py  new_command_timeout_option.py  no_reset_option.py  orientation_option.py  other_apps_option.py  platform_name_option.py  platform_version_option.py  postrun_option.py  prerun_option.py  print_page_source_on_find_failure_option.py  skip_log_capture_option.py  supports_capabilities.py  system_host_option.py  system_port_option.py  udid_option.py
appium/options/flutter/: base.py  flutter_element_wait_timeout_option.py  flutter_enable_mock_camera_option.py  flutter_server_launch_timeout_option.py  flutter_system_port_option.py
appium/options/flutter_integration/: __init__.py  base.py  flutter_element_wait_timeout_option.py  flutter_enable_mock_camera_option.py  flutter_server_launch_timeout_option.py  flutter_system_port_option.py
appium/options/gecko/: __init__.py  android_storage_option.py  base.py  firefox_options_option.py  gecko_options.py  marionette_port_option.py  verbosity_option.py
appium/options/ios/: __init__.py
appium/options/mac/: __init__.py
appium/options/windows/: __init__.py
appium/protocols/: protocol.py
appium/protocols/webdriver/: __init__.py  can_execute_commands.py  can_execute_scripts.py  can_find_elements.py  can_remember_extension_presence.py
appium/webdriver/: __init__.py  appium_connection.py  appium_service.py  applicationstate.py  client_config.py  clipboard_content_type.py  command_method.py  connectiontype.py  errorhandler.py  flutter_finder.py  gsm_call_actions.py  gsm_signal_strength.py  imagelement.py  locator_converter.py  mobilecommand.py  switch_to.py  webdriver.py  webelement.py
appium/webdriver/common/: __init__.py  appiumby.py  flutterby.py  mobileby.py  multi_action.py  touch_action.py
appium/webdriver/extensions/: __init__.py  action_helpers.py  active_element.py  activities.py  applications.py  clipboard.py  context.py  device_time.py  execute_driver.py  execute_mobile_command.py  gsm.py  hw_actions.py  images_comparison.py  ime.py  keyboard.py  location.py  log_event.py  log_events.py  logs.py  network.py  performance.py  power.py  remote_fs.py  screen_record.py  search_context.py  session.py  settings.py  sms.py  system_bars.py
appium/webdriver/helpers/: context.py  location.py
ci-jobs/: functional_test.yml
ci-jobs/functional/: ios_setup.yml  publish_test_result.yml  run_android_test.yml  run_appium.yml  run_ios_test.yml  run_test.yml  save_appium_log.yml  setup_appium.yml  start-emulator.sh
ci-jobs/scripts/: start_server.sh
docs/: Makefile  README.md  conf.py  generate.sh  index.rst  requirements.txt  roadmap.md  webdriver.common.rst  webdriver.extensions.android.rst  webdriver.extensions.flutter_integration.rst  webdriver.extensions.rst  webdriver.extensions.search_context.rst  webdriver.rst
docs/source/: conf.py  index.rst
script/: helper.py  pylance_repro.py  release.py
test/: pytest.ini
test/apps/: ApiDemos-debug.apk  selendroid-test-app.apk
test/functional/: test_helper.py
test/functional/android/: activities_tests.py  appium_service_test.py  appium_service_tests.py  appium_tests.py  applications_tests.py  bidi_tests.py  chrome_tests.py  common_tests.py  context_switching_tests.py  desired_capabilities.py  device_time_tests.py  find_by_accessibility_id_tests.py  find_by_image_tests.py  find_by_uiautomator_tests.py  finger_print_tests.py  helper.py  hw_actions.py  hw_actions_tests.py  ime_tests.py  keyboard_tests.py  location_tests.py  log_event_tests.py  multi_action_tests.py  network_connection_tests.py  options.py  push_file_tests.py  remote_fs_tests.py  screen_record_tests.py  selendroid_tests.py  settings_tests.py  test_file.txt  test_helper.py  touch_action_tests.py  uia2_tests.py  webdriver_tests.py  webelement_tests.py
test/functional/flutter/: commands_test.py  finder_test.py
test/functional/flutter_integration/: commands_test.py  conftest.py  finder_test.py
test/functional/ios/: appium_tests.py  applications_tests.py  desired_capabilities.py  execute_driver_tests.py  find_by_element_webelement_tests.py  find_by_ios_class_chain_tests.py  find_by_ios_predicate_tests.py  find_by_predicatestring_tests.py  find_by_uiautomation_tests.py  hw_actions_tests.py  keyboard_tests.py  multi_action_tests.py  push_file_tests.py  remote_fs_tests.py  safari_tests.py  screen_record_tests.py  test_file.txt  webdriver_tests.py
test/functional/mac/: execute_script_test.py  webelement_test.py
test/helpers/: constants.py
test/unit/: junit.xml  multi_action_tests.py  touch_action_tests.py  webdriver_tests.py
test/unit/helper/: test_helper.py
test/unit/webdriver/: app_test.py  appium_connection_test.py  appium_service_test.py  context_test.py  (+14 more)
(+303 files in other folders)
