[project]
name = "Appium-Python-Client"
dynamic = [
  "version",
  "description",
  "readme",
  "license",
  "authors",
  "maintainers",
  "keywords",
  "classifiers"
]
requires-python = ">=3.9"
dependencies = [
  "selenium>=4.26,<5.0",
  "typing-extensions~=4.13",
]

[tool.uv]
dev-dependencies = [
  "httpretty~=1.1",
  "mock~=5.2",
  "mypy~=1.17",
  "pre-commit~=4.2",
  "pytest~=8.4",
  "pytest-cov~=6.2",
  "pytest-xdist~=3.8",
  "python-dateutil~=2.9",
  "ruff~=0.12",
  "types-python-dateutil~=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "regex"
path = "appium/version.py"
pattern = "(?P<version>\\d+\\.\\d+\\.\\d+)"

[tool.hatch.build.targets.wheel]
packages = ["appium"]
